Project

General

Profile

Actions

Bug #60625

closed

crash: MDSRank::send_message_client(boost::intrusive_ptr<Message> const&, Session*)

Added by Telemetry Bot 12 months ago. Updated 7 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Telemetry
Tags:
backport_processed
Backport:
reef,quincy,pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):

f1305aadf236d5bad9143901ec8272e569dfdaca4a763120933d32c24aac6139


Description

http://telemetry.front.sepia.ceph.com:4000/d/jByk5HaMz/crash-spec-x-ray?orgId=1&var-sig_v2=c2092a196eb69c3c08a39646d7f21f458de11b6100025c52856e0495f0e6f042

Sanitized backtrace:

    MDSRank::send_message_client(boost::intrusive_ptr<Message> const&, Session*)
    MDSRank::forward_message_mds(boost::intrusive_ptr<MClientRequest const> const&, int)
    MDCache::request_forward(boost::intrusive_ptr<MDRequestImpl>&, int, int)
    MDSContext::complete(int)
    void finish_contexts<std::vector<MDSContext*, std::allocator<MDSContext*> > >(ceph::common::CephContext*, std::vector<MDSContext*, std::allocator<MDSContext*> >&, int)
    MDCache::open_ino_finish(inodeno_t, MDCache::open_ino_info_t&, int)
    MDCache::_open_ino_traverse_dir(inodeno_t, MDCache::open_ino_info_t&, int)
    MDSContext::complete(int)
    MDSRank::_advance_queues()
    MDSRank::_dispatch(boost::intrusive_ptr<Message const> const&, bool)
    MDSRankDispatcher::ms_dispatch(boost::intrusive_ptr<Message const> const&)
    MDSDaemon::ms_dispatch2(boost::intrusive_ptr<Message> const&)
    DispatchQueue::entry()
    DispatchQueue::DispatchThread::entry()

Crash dump sample:
{
    "archived": "2023-03-10 18:09:56.420072",
    "backtrace": [
        "/lib64/libpthread.so.0(+0x12cf0) [0x7fdd2a6a8cf0]",
        "(MDSRank::send_message_client(boost::intrusive_ptr<Message> const&, Session*)+0x40) [0x561f5011ce90]",
        "(MDSRank::forward_message_mds(boost::intrusive_ptr<MClientRequest const> const&, int)+0x227) [0x561f5011d2f7]",
        "(MDCache::request_forward(boost::intrusive_ptr<MDRequestImpl>&, int, int)+0x29a) [0x561f5027266a]",
        "(MDSContext::complete(int)+0x5f) [0x561f5045e6df]",
        "(void finish_contexts<std::vector<MDSContext*, std::allocator<MDSContext*> > >(ceph::common::CephContext*, std::vector<MDSContext*, std::allocator<MDSContext*> >&, int)+0x8d) [0x561f5010b85d]",
        "(MDCache::open_ino_finish(inodeno_t, MDCache::open_ino_info_t&, int)+0x138) [0x561f50287018]",
        "(MDCache::_open_ino_traverse_dir(inodeno_t, MDCache::open_ino_info_t&, int)+0xbb) [0x561f5028736b]",
        "(MDSContext::complete(int)+0x5f) [0x561f5045e6df]",
        "(MDSRank::_advance_queues()+0xaa) [0x561f5011929a]",
        "(MDSRank::_dispatch(boost::intrusive_ptr<Message const> const&, bool)+0x1d8) [0x561f50119dc8]",
        "(MDSRankDispatcher::ms_dispatch(boost::intrusive_ptr<Message const> const&)+0x5c) [0x561f5011a80c]",
        "(MDSDaemon::ms_dispatch2(boost::intrusive_ptr<Message> const&)+0x1bf) [0x561f501045ff]",
        "(Messenger::ms_deliver_dispatch(boost::intrusive_ptr<Message> const&)+0x478) [0x7fdd2b928c88]",
        "(DispatchQueue::entry()+0x50f) [0x7fdd2b9260cf]",
        "(DispatchQueue::DispatchThread::entry()+0x11) [0x7fdd2b9ed8f1]",
        "/lib64/libpthread.so.0(+0x81ca) [0x7fdd2a69e1ca]",
        "clone()" 
    ],
    "ceph_version": "17.2.5",
    "crash_id": "2023-03-10T17:50:01.262931Z_319b1b7e-54fc-47a4-bf78-f80ca4b80ccf",
    "entity_name": "mds.2a2d0384d76981ae1ee807a65ba53f8c9a1d7fe9",
    "os_id": "centos",
    "os_name": "CentOS Stream",
    "os_version": "8",
    "os_version_id": "8",
    "process_name": "ceph-mds",
    "stack_sig": "f1305aadf236d5bad9143901ec8272e569dfdaca4a763120933d32c24aac6139",
    "timestamp": "2023-03-10T17:50:01.262931Z",
    "utsname_machine": "x86_64",
    "utsname_release": "5.15.0-53-generic",
    "utsname_sysname": "Linux",
    "utsname_version": "#59~20.04.1-Ubuntu SMP Thu Oct 20 15:10:22 UTC 2022" 
}


Related issues 3 (0 open3 closed)

Copied to CephFS - Backport #62200: quincy: crash: MDSRank::send_message_client(boost::intrusive_ptr<Message> const&, Session*)ResolvedXiubo LiActions
Copied to CephFS - Backport #62201: reef: crash: MDSRank::send_message_client(boost::intrusive_ptr<Message> const&, Session*)ResolvedXiubo LiActions
Copied to CephFS - Backport #62202: pacific: crash: MDSRank::send_message_client(boost::intrusive_ptr<Message> const&, Session*)ResolvedXiubo LiActions
Actions #1

Updated by Telemetry Bot 12 months ago

  • Crash signature (v1) updated (diff)
  • Crash signature (v2) updated (diff)
  • Affected Versions v17.2.5 added
Actions #2

Updated by Milind Changire 10 months ago

  • Assignee set to Xiubo Li
Actions #3

Updated by Xiubo Li 10 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 52376
Actions #4

Updated by Venky Shankar 9 months ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to reef,quincy,pacific
Actions #5

Updated by Backport Bot 9 months ago

  • Copied to Backport #62200: quincy: crash: MDSRank::send_message_client(boost::intrusive_ptr<Message> const&, Session*) added
Actions #6

Updated by Backport Bot 9 months ago

  • Copied to Backport #62201: reef: crash: MDSRank::send_message_client(boost::intrusive_ptr<Message> const&, Session*) added
Actions #7

Updated by Backport Bot 9 months ago

  • Copied to Backport #62202: pacific: crash: MDSRank::send_message_client(boost::intrusive_ptr<Message> const&, Session*) added
Actions #8

Updated by Backport Bot 9 months ago

  • Tags set to backport_processed
Actions #9

Updated by Xiubo Li 7 months ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF